# schemaforge

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.yaml  context.yaml  output.sql  schema.sql  schemaforge.yaml
.cache/clangd/index/: AlterStatement.h.E0AC8E560C9AFECC.idx  ColumnType.h.A3E05B57BE815135.idx  CreateStatement.h.E3F49A64054F7DAC.idx  DeleteStatement.h.46153CC6CB11BD2D.idx  DropStatement.h.08DE4B60023F04C1.idx  ExecuteStatement.h.FDA21B01AE9A810C.idx  ExportStatement.h.1FE532D24AC10084.idx  Expr.h.C537779FB41BC391.idx  ImportExportOptions.h.E62720C546ECA4FF.idx  ImportStatement.h.38C34C3B1884BD2A.idx  InsertStatement.h.CCA5CAB001A30E0F.idx  PrepareStatement.h.B2CFC88EBDC2D113.idx  SQLParser.h.7BA51A0AF4FB0461.idx  SQLParserResult.h.A223EC490FADF7A5.idx  SQLStatement.h.2E78CC6C08EDCC72.idx  SelectStatement.h.CEB489A7B9C88B3D.idx  ShowStatement.h.6E5944B107D14A22.idx  Table.h.A64179C5A9E23329.idx  TransactionStatement.h.8126588F8E7128C1.idx  UpdateStatement.h.1EF959D08F80A035.idx  main.cpp.C2C323B0BF3B546A.idx  statements.h.5A5A59DBC776106C.idx
docs/: architecture.md
examples/benchmarks/ecommerce_large/: README.md  schema.sql  schemaforge.yaml
examples/benchmarks/single_table_1m/: README.md  schema.sql  schemaforge.yaml
examples/benchmarks/users_orders_1m/: README.md  schema.sql  schemaforge.yaml
examples/final_demo/: README.md  expected_benchmark_sample.txt  expected_output_sample.sql  schema.sql  schemaforge.yaml  schemaforge_csv.yaml  schemaforge_postgres_copy.yaml
include/schemaforge/benchmark/: BenchmarkEngine.h
include/schemaforge/config/: GenerationConfig.h
include/schemaforge/domain/: ColumnDomainResolver.h
include/schemaforge/generator/: BooleanGenerator.h  DecimalGenerator.h  GeneratedValue.h  GenerationConfig.h  GenerationPlan.h  IntGenerator.h  KeyRegistry.h  RandomEngine.h  RealisticValueGenerator.h  TextGenerator.h  ValueGenerator.h
include/schemaforge/graph/: DependencyGraph.h
include/schemaforge/io/: FileReader.h
include/schemaforge/output/: CsvWriter.h  PostgresCopyWriter.h  SqlInsertWriter.h
include/schemaforge/parser/: ParserAdapter.h
include/schemaforge/schema/: Column.h  Table.h
include/schemaforge/validation/: CapacityAnalyzer.h  GenerationFeasibilityValidator.h  PostgresDockerValidator.h  SQLiteValidator.h  SchemaValidator.h  ValidationResult.h  ValidationRunner.h
scripts/: run_benchmarks.sh  run_integration_tests.sh  run_postgres_validation_tests.sh
src/: main.cpp
src/benchmark/: BenchmarkEngine.cpp
src/config/: GenerationConfig.cpp
src/domain/: ColumnDomainResolver.cpp
src/generator/: BooleanGenerator.cpp  DecimalGenerator.cpp  GenerationConfig.cpp  GenerationPlan.cpp  IntGenerator.cpp  KeyRegistry.cpp  RealisticValueGenerator.cpp  TextGenerator.cpp  ValueGenerator.cpp
src/graph/: DependencyGraph.cpp
src/io/: FileReader.cpp
src/output/: CsvWriter.cpp  PostgresCopyWriter.cpp  SqlInsertWriter.cpp
src/parser/: ParserAdapter.cpp
src/schema/: Column.cpp  Table.cpp
src/validation/: CapacityAnalyzer.cpp  GenerationFeasibilityValidator.cpp  PostgresDockerValidator.cpp  SQLiteValidator.cpp  SchemaValidator.cpp  ValidationResult.cpp  ValidationRunner.cpp
tests/invalid/composite_primary_key/: schema.sql
tests/invalid/composite_primary_key_too_many/: schema.sql
tests/invalid/composite_unique_check_too_many/: schema.sql
tests/invalid/composite_unique_missing_column/: schema.sql
tests/invalid/cycle/: schema.sql
tests/invalid/duplicate_column_names/: schema.sql
tests/invalid/duplicate_table_names/: schema.sql
tests/invalid/fk_column_count_mismatch/: schema.sql
tests/invalid/fk_references_non_unique/: schema.sql
tests/invalid/fk_type_mismatch/: schema.sql
tests/invalid/missing_fk_column/: schema.sql
tests/invalid/missing_fk_local_column/: schema.sql
tests/invalid/missing_fk_table/: schema.sql
tests/invalid/missing_pk_column/: schema.sql
tests/invalid/missing_unique_column/: schema.sql
tests/invalid/multiple_errors/: schema.sql
tests/invalid/self_reference/: schema.sql
tests/invalid/unique_boolean_too_many/: schema.sql
tests/invalid/unique_char_too_many/: schema.sql
tests/invalid/unique_check_in_too_many/: schema.sql
tests/invalid/unique_check_range_too_many/: schema.sql
tests/invalid/unique_fk_too_many_children/: schema.sql
tests/invalid/unsupported_char_fk/: schema.sql
tests/invalid/unsupported_check/: schema.sql
tests/invalid/unsupported_check_or/: schema.sql
tests/invalid/unsupported_date/: schema.sql
tests/invalid/unsupported_fk_generation_type/: schema.sql
tests/invalid/unsupported_json/: schema.sql
tests/invalid/unsupported_pk_generation_type/: schema.sql
tests/invalid/zero_parent_rows_for_fk/: schema.sql
tests/valid/advanced_check_constraints/: schema.sql
tests/valid/all_supported_types/: schema.sql
tests/valid/basic_fk/: schema.sql
tests/valid/char_cycle/: schema.sql
tests/valid/char_primary_key/: schema.sql
tests/valid/char_unique_within_capacity/: schema.sql
(+35 files in other folders)
